--- a/gs/group/member/invite/resend/locales/de/LC_MESSAGES/gs.group.member.invite.resend.po
+++ b/gs/group/member/invite/resend/locales/de/LC_MESSAGES/gs.group.member.invite.resend.po
@@ -1,18 +1,21 @@
+# 
+# Translators:
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: gs.group.member.invite.resend\n"
 "POT-Creation-Date: 2016-02-23 17:14+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
+"PO-Revision-Date: 2016-02-23 17:25+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: German (http://www.transifex.com/groupserver/gs-group-member-invite-resend/language/de/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0\n"
+"Domain: DOMAIN\n"
+"Language: de\n"
 "Language-Code: en\n"
 "Language-Name: English\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Preferred-Encodings: utf-8 latin1\n"
-"Domain: DOMAIN\n"
 
 #. Default: "<p>There is an error:</p>"
 #: ./reinvite.py:97
@@ -24,22 +27,29 @@ msgstr ""
 msgid "feedback-errors"
 msgstr ""
 
-#. Default: "<ul>\n<li>Cannot <b>resend</b> an invitation to ${userName}, because they have yet been <i>invited</i> to\njoin ${groupName}.</li>\n<li>No changes have been made.</li>\n</ul>"
+#. Default: "<ul>\n<li>Cannot <b>resend</b> an invitation to ${userName},
+#. because they have yet been <i>invited</i> to\njoin
+#. ${groupName}.</li>\n<li>No changes have been made.</li>\n</ul>"
 #: ./reinvite.py:125
 msgid "feedback-issues"
 msgstr ""
 
-#. Default: "<ul>\n<li>${userName} (with the email address {emailAddress}) is already a member 'of ${groupName}.</li>\n<li>No changes have been made.</li>\n</ul>"
+#. Default: "<ul>\n<li>${userName} (with the email address {emailAddress}) is
+#. already a member 'of ${groupName}.</li>\n<li>No changes have been
+#. made.</li>\n</ul>"
 #: ./reinvite.py:111
 msgid "feedback-members"
 msgstr ""
 
-#. Default: "<ul>\n<li>Resent the invitation to ${userName} (to the email address ${emailAddress}) to join\n${groupName}.</li>\n</ul>"
+#. Default: "<ul>\n<li>Resent the invitation to ${userName} (to the email
+#. address ${emailAddress}) to join\n${groupName}.</li>\n</ul>"
 #: ./reinvite.py:118
 msgid "feedback-resent"
 msgstr ""
 
-#. Default: "The message that appears at the top of the email invitation to the new group member. The message will appear before the two links that allow the user to accept or reject the invitation."
+#. Default: "The message that appears at the top of the email invitation to
+#. the new group member. The message will appear before the two links that
+#. allow the user to accept or reject the invitation."
 #: ./interfaces.py:45
 msgid "form-field-mesg-desc"
 msgstr ""
@@ -84,7 +94,9 @@ msgstr ""
 msgid "inviation-email-subject"
 msgstr ""
 
-#. Default: "Please accept this invitation to join ${groupName}. I have set up a\nprofile for you, so you can start participating in the group as soon as you\naccept this invitation."
+#. Default: "Please accept this invitation to join ${groupName}. I have set up
+#. a\nprofile for you, so you can start participating in the group as soon as
+#. you\naccept this invitation."
 #: ./reinvite.py:78
 msgid "invitation-email-body"
 msgstr ""
@@ -104,7 +116,8 @@ msgstr ""
 msgid "page-button"
 msgstr ""
 
-#. Default: "To resend an invitation to ${userName} (${email}), customise the message below and click the <samp class=\"button\">Resend</samp> button."
+#. Default: "To resend an invitation to ${userName} (${email}), customise the
+#. message below and click the <samp class=\"button\">Resend</samp> button."
 #: ./browser/templates/resend_invite.pt:49
 msgid "page-intro"
 msgstr ""
@@ -123,4 +136,3 @@ msgstr ""
 #: ./browser/templates/resend_invite.pt:13
 msgid "page-title-element"
 msgstr ""
-
