--- a/gs/group/member/invite/resend/locales/de/LC_MESSAGES/gs.group.member.invite.resend.po
+++ b/gs/group/member/invite/resend/locales/de/LC_MESSAGES/gs.group.member.invite.resend.po
@@ -1,11 +1,12 @@
 # 
 # Translators:
+# Stephan G. Blendinger <stephanblendinger@me.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: gs.group.member.invite.resend\n"
 "POT-Creation-Date: 2016-02-23 17:14+0000\n"
-"PO-Revision-Date: 2016-02-23 17:25+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2016-07-11 12:47+0000\n"
+"Last-Translator: Stephan G. Blendinger <stephanblendinger@me.com>\n"
 "Language-Team: German (http://www.transifex.com/groupserver/gs-group-member-invite-resend/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,12 +21,12 @@ msgstr ""
 #. Default: "<p>There is an error:</p>"
 #: ./reinvite.py:97
 msgid "feedback-error"
-msgstr ""
+msgstr "<p>Es ist ein Fehler aufgetreten:</p>"
 
 #. Default: "<p>There are errors:</p>"
 #: ./reinvite.py:99
 msgid "feedback-errors"
-msgstr ""
+msgstr "<p> Es sind Fehler aufgetreten: </ p>"
 
 #. Default: "<ul>\n<li>Cannot <b>resend</b> an invitation to ${userName},
 #. because they have yet been <i>invited</i> to\njoin
@@ -52,47 +53,47 @@ msgstr ""
 #. allow the user to accept or reject the invitation."
 #: ./interfaces.py:45
 msgid "form-field-mesg-desc"
-msgstr ""
+msgstr "Diese Nachricht wird dem neuen Gruppenmitglied in der Einladung angezeigt. Sie erschein vor den beiden Links, welche dem Empfänger die Möglichkeit geben die Einladung anzunehmen oder abzulehnen. "
 
 #. Default: "Invitation message"
 #: ./interfaces.py:44
 msgid "form-field-msg-h"
-msgstr ""
+msgstr "Einladungsnachricht"
 
 #. Default: "The name of the invited member."
 #: ./interfaces.py:41
 msgid "form-field-name-desc"
-msgstr ""
+msgstr "Der Name des eingeladenen Mitglieds."
 
 #. Default: "Name"
 #: ./interfaces.py:40
 msgid "form-field-name-h"
-msgstr ""
+msgstr "Name"
 
 #. Default: "The subject-line of the invitation."
 #: ./interfaces.py:28
 msgid "form-field-subject-desc"
-msgstr ""
+msgstr "Die Betreffzeile der Einladung."
 
 #. Default: "Subject"
 #: ./interfaces.py:27
 msgid "form-field-subject-h"
-msgstr ""
+msgstr "Betreff"
 
 #. Default: "The email address of the person receiving the invitation."
 #: ./interfaces.py:36
 msgid "form-field-to-desc"
-msgstr ""
+msgstr "Die E-Mail-Adresse der Person, welche die Einladung erhält."
 
 #. Default: "To"
 #: ./interfaces.py:35
 msgid "form-field-to-h"
-msgstr ""
+msgstr "An"
 
 #. Default: "Invitation to join ${groupName} (action required)"
 #: ./reinvite.py:74
 msgid "inviation-email-subject"
-msgstr ""
+msgstr "Einladung zum Beitritt von ${groupName} (Aktion erforderlich)"
 
 #. Default: "Please accept this invitation to join ${groupName}. I have set up
 #. a\nprofile for you, so you can start participating in the group as soon as
@@ -104,33 +105,33 @@ msgstr ""
 #. Default: "Manage members"
 #: ./browser/templates/resend_invite.pt:36
 msgid "page-breadcrumb-manage"
-msgstr ""
+msgstr "Mitglieder verwalten"
 
 #. Default: "Resend invitation"
 #: ./browser/templates/resend_invite.pt:38
 msgid "page-breadcrumb-resend"
-msgstr ""
+msgstr "Einladung zurücksenden"
 
 #. Default: "Resend"
 #: ./reinvite.py:90
 msgid "page-button"
-msgstr ""
+msgstr "Zurücksenden"
 
 #. Default: "To resend an invitation to ${userName} (${email}), customise the
 #. message below and click the <samp class=\"button\">Resend</samp> button."
 #: ./browser/templates/resend_invite.pt:49
 msgid "page-intro"
-msgstr ""
+msgstr "Um eine Einladung an ${userName} (${email}) zurück zu senden, bearbeiten Sie unten die Nachricht und klicken Sie auf den <samp class=\"button\">Zurücksenden</samp> Button."
 
 #. Default: "Preview…"
 #: ./browser/templates/resend_invite.pt:65
 msgid "page-preview"
-msgstr ""
+msgstr "Vorschau..."
 
 #. Default: "Resend the invitation to ${userName}"
 #: ./reinvite.py:46
 msgid "page-title"
-msgstr ""
+msgstr "Eine Einladung an ${userName} zurückzusenden"
 
 #. Default: "Resend invitation: Manage members: ${groupName}: ${siteName}"
 #: ./browser/templates/resend_invite.pt:13
